@@ -2,6 +2,7 @@
 
 S3method(print,coda)
 export(alr_basis)
+export(balance_using_pc)
 export(basis)
 export(cbalance_approx)
 export(cc_basis)
