@@ -182,6 +182,17 @@ BEGIN_RCPP
     return rcpp_result_gen;
 END_RCPP
 }
+// get_balance_using_pc
+arma::vec get_balance_using_pc(arma::mat& X);
+RcppExport SEXP _coda_base_get_balance_using_pc(SEXP XSEXP) {
+BEGIN_RCPP
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
+    Rcpp::traits::input_parameter< arma::mat& >::type X(XSEXP);
+    rcpp_result_gen = Rcpp::wrap(get_balance_using_pc(X));
+    return rcpp_result_gen;
+END_RCPP
+}
 // find_PB
 arma::mat find_PB(arma::mat& X);
 RcppExport SEXP _coda_base_find_PB(SEXP XSEXP) {
@@ -243,6 +254,7 @@ static const R_CallMethodDef CallEntries[] = {
     {"_coda_base_coordinates_basis", (DL_FUNC) &_coda_base_coordinates_basis, 3},
     {"_coda_base_ilr_coordinates", (DL_FUNC) &_coda_base_ilr_coordinates, 1},
     {"_coda_base_inv_ilr_coordinates", (DL_FUNC) &_coda_base_inv_ilr_coordinates, 1},
+    {"_coda_base_get_balance_using_pc", (DL_FUNC) &_coda_base_get_balance_using_pc, 1},
     {"_coda_base_find_PB", (DL_FUNC) &_coda_base_find_PB, 1},
     {"_coda_base_find_PB_using_pc", (DL_FUNC) &_coda_base_find_PB_using_pc, 1},
     {"_coda_base_find_PB_using_pc_recursively", (DL_FUNC) &_coda_base_find_PB_using_pc_recursively, 1},
